twitter tweet styling?

--- a/css/main.scss
+++ b/css/main.scss
@@ -3,6 +3,7 @@
 // External
 @import 'external/reset';
 @import 'external/syntax';
+@import 'external/twitter';
 
 // Base
 @import 'base/variables';
