--- a/_sass/layouts/_index.scss
+++ b/_sass/layouts/_index.scss
@@ -23,6 +23,9 @@
     p a:hover {
       @extend %link-hover;
     }
+    header {
+      margin-bottom: 1em;
+    }
   }
   .excerpt {
     margin-top: 1em;
