--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,17 +1,17 @@
 <header class="site-header">
 
 	<div class="branding">
-		{% if site.theme.gravatar %}
+		{% if site.theme_settings.gravatar %}
     <a href="{{ site.baseurl }}/">
-      <img class="avatar" src="https://secure.gravatar.com/avatar/{{ site.theme.gravatar }}?s=100" alt=""/>
+      <img class="avatar" src="https://secure.gravatar.com/avatar/{{ site.theme_settings.gravatar }}?s=100" alt=""/>
     </a>
-		{% else if site.theme.avatar %}
+		{% else if site.theme_settings.avatar %}
 		<a href="{{ site.baseurl }}/">
-      <img class="avatar" src="/img/{{ site.theme.avatar }}" alt=""/>
+      <img class="avatar" src="/img/{{ site.theme_settings.avatar }}" alt=""/>
     </a>
 		{% endif %}
 		<h1 class="site-title">
-			<a href="{{ site.baseurl }}/">{{ site.theme.title }}</a>
+			<a href="{{ site.baseurl }}/">{{ site.theme_settings.title }}</a>
 		</h1>
 	</div>
 	
